fix overflow and logo

--- a/src/css/story/header.styl
+++ b/src/css/story/header.styl
@@ -16,7 +16,6 @@ header
 		svg
 			fill $fg
 			display block
-			width 100%	
 	
 header.is-sticky
 	position absolute
