--- a/src/css/story/story.styl
+++ b/src/css/story/story.styl
@@ -9,6 +9,7 @@ body
 	background linear-gradient(135deg, rgba($fg, 0.03) 25%, transparent 25%) -50px 0, linear-gradient(225deg, rgba($fg, 0.03) 25%, transparent 25%) -50px 0, linear-gradient(315deg, rgba($fg, 0.03) 25%, transparent 25%), linear-gradient(45deg, rgba($fg, 0.03) 25%, transparent 25%)
 	background-size 100px 100px
 	background-color $bg
+	overflow hidden
 
 section
 	display none
